# INFO_ABOUT_BOOK_API

./: .gitignore  Dockerfile  README.md  compose.elk.yaml  config.py  database.py  docker-compose.yaml  exceptions.py  init.sql  logger_config.py  main.py  pyproject.toml  pytest.ini
db/: database.py
docker/: app.sh
endpoints/: authors.py  books.py  tags.py  users.py
filebeat/: Dockerfile  filebeat.yml
migrations/: env.py
migrations/versions/: 0852df44c23f_added_users_table.py  22fb8a80c522_initial_migration.py  97e97e320fe8_created_users_table.py
models/: authors.py  books.py  tags.py  users.py
schemas/: authors.py  books.py  tags.py  users.py
scripts/: authors.sql  book_author.sql  book_tag.sql  books.sql  tags.sql  users.sql
services/: author_service.py  base.py  book_service.py  registration_and_login_service.py  tag_service.py  user_service.py
shemas/: authors.py  books.py  tags.py
tests/: conftest.py  mock_authors.json  mock_book_author.json  mock_book_tag.json  mock_books.json  mock_tags.json  mock_users.json
tests/inegration_tests/test_users/: test_api.py
tests/unit_tests/test_authors/: test_author_service.py
tests/unit_tests/test_books/: test_book_service.py
tests/unit_tests/test_tags/: test_tag_service.py
users/: auth.py  dependencies.py
utils/: elasticsearch_utils.py  wrapers.py
