[tool.poetry]
name = "info-about-book-api"
version = "0.1.0"
description = "API для управления информацией о книгах, авторах и тегах."
authors = ["Dmitriy Kultyshev <@kuldm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
