[tool.poetry]
name = "info-about-book-api"
version = "0.1.0"
description = "API для управления информацией о книгах, авторах и тегах."
authors = ["Dmitriy Kultyshev <@kuldm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.3"
sqlalchemy = "^2.0.34"
pydantic = "^2.8.2"
alembic = "^1.13.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
